@@ -204,6 +204,17 @@ PING_FLOOD_TIME_50  20.0  # Minimum time for 50 ping packets to arrive.
 PING_FLOOD_TIME_100 100.0 # Minimum time for 100 ping packets to arrive.
 PING_FLOOD_GLOBAL   .1    # The same times, multiplied by this value, count for all pings from all machines. Negative values disable global flood protection.
 
+# default settings for MOVE/KICK(_TO)
+
+# default kick reason given for the KICK console command
+#DEFAULT_KICK_REASON
+
+# default redirection kick/move reason given for the KICK/MOVE_TO console commands
+#DEFAULT_KICK_TO_REASON
+
+DEFAULT_KICK_TO_SERVER    # default server to kick/move to (IP or hostname)
+DEFAULT_KICK_TO_PORT 4534 # default port of the server to kick/move to
+
 ############################################################################################
 #
 # Game settings
