@@ -35,6 +35,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "uMenu.h"
 
 #include "nConfig.h"
+#include "nServerInfo.h"
 
 #include "rConsole.h"
 
@@ -728,6 +729,25 @@ private:
     nMachine * machine_;
 };
 
+static tString se_voteKickToServer("");
+static int se_voteKickToPort = 4534;
+static tSettingItem< tString > se_voteKickToServerConf( "VOTE_KICK_TO_SERVER", se_voteKickToServer );
+static tSettingItem< int > se_voteKickToPortConf( "VOTE_KICK_TO_PORT", se_voteKickToPort );
+
+void se_VoteKickUser( int user )
+{
+    if ( se_voteKickToServer.Len() < 2 )
+    {
+        sn_KickUser( user, tOutput("$voted_kill_kick") );
+    }
+    else
+    {
+        // kick player to default destination
+        nServerInfoRedirect redirect( se_voteKickToServer, se_voteKickToPort );
+        sn_KickUser( user, tOutput("$voted_kill_kick"), 1, &redirect );
+    }
+}
+
 // something to vote on
 class eVoteItemKick: public virtual eVoteItem
 {
@@ -834,7 +854,7 @@ protected:
             // kick the player, he is online
             int user = player_->Owner();
             if ( user > 0 )
-                sn_KickUser( user, tOutput("$voted_kill_kick") );
+                se_VoteKickUser( user );
         }
         else if ( machine_ )
         {
@@ -848,7 +868,7 @@ protected:
                 {
                     if ( &nMachine::GetMachine( user ) == machine )
                     {
-                        sn_KickUser( user, tOutput("$voted_kill_kick")  );
+                        se_VoteKickUser( user );
                         kick = true;
                     }
                 }
@@ -979,7 +999,7 @@ public:
         if(sn_GetNetState()==nSERVER)
         {
             // kill user directly
-            sn_KickUser( player_->Owner(), tOutput("$voted_kill_kick") );
+            se_VoteKickUser( player_->Owner() );
         }
         {
             // issue kick vote
